# openlist-desktop-service

./: .env.example  Cargo.toml  README.md  README_en.md  rustfmt.toml
.github/build-for-linux/: action.yml
.github/workflows/: check.yml  release.yml  releaseMac.yml
src/: install.rs  lib.rs  main.rs  uninstall.rs  utils.rs
src/files/: info.plist.tmpl  launchd.plist.tmpl  openrc_service_unit.tmpl  systemd_service_unit.tmpl
src/openlistcore/: core.rs  data.rs  http_api.rs  mod.rs  process.rs
